--- a/views/account/privacy.handlebars
+++ b/views/account/privacy.handlebars
@@ -1,9 +1,6 @@
 <div class="row">
 
-<div class="col-lg-2">
-
-</div>
-<div style="margin-top: 100px; background-color: whitesmoke" class="col-lg-8">
+<div style="margin-top: 140px; padding: 40px; background-color: whitesmoke; border-radius: 5%; margin-left: 20%" class="col-lg-8">
 <h2 id="terms-h2">CesarCells Consent Language</h2>
 Thank you for using our website.
 
@@ -19,7 +16,7 @@ Thank you for using our website.
 
 
 
-<p class="lead"><strong>By clicking on the "I Agree" checkbox:</strong> I am indicating my understanding, acknowledgement and consent to the use of my personal and/or my protected health information by CesarCells.com and Cell Companies, that is being provided to CesarCells.com by me, including my name, email and phone number.</p>
+<p class="lead">By clicking on the "I Agree" checkbox, I am indicating my understanding, acknowledgement and consent to the use of my personal and/or my protected health information by CesarCells.com and Cell Companies, that is being provided to CesarCells.com by me, including my name, email and phone number.</p>
 
 <p class="lead">I authorize CesarCells.com and Cell Companies to use my personal and/or my protected health information for the sole purpose of contacting me with respect to products and/or services related to , and that such information may no longer be protected by federal regulation regarding privacy of health information for educational and marketing purposes.</p>
 
