--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 
          </div>
            
-                <h1 class="main-h1"> <br>Find a <strong id="index-title">retinal disease treatment.</strong>
+                <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong>
                     <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
                 </h1> 
              
@@ -19,7 +19,7 @@
 
 <div id="part-1"></div>
  
-<section id="cta" class="parallax">
+{{!-- <section id="cta" class="parallax"> --}}
    <div class="overlay"></div>
    {{!-- <div class="container"> --}}
      
@@ -34,7 +34,7 @@
              <p class="lead index-page">
              Cesarcells.com helps you find cutting edge clinical trials. 
 
-             It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
+             It is an independent resource on Stargardts disease as well as other <strong id="index-title">Age Related Macular Degeneration (ARMD)</strong> eye diseases. 
 
              We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
              </p> <br>
@@ -45,7 +45,7 @@
          </h2>
          </header>
        </div>
- </section>
+ {{!-- </section> --}}
              
 <A name="how-it-work-main"></A>
 
@@ -58,8 +58,8 @@
 
                
 
-                <p class="lead index-page">Take a 5 minute assessment to see if you qualify for clinical trials. 
-               Then contact the clinics you qualified for.</p>
+                <p class="lead index-page">Take a 5 minute assessment to see if you <strong id="index-title">qualify for clinical trials.</strong> 
+               Then <strong id="index-title">contact the clinics</strong> you qualified for.</p>
 
 
                 
@@ -74,9 +74,49 @@
         </div>
 
 </section>
+
+<!-- Treatments Section -->
+<A name="treatments-main"></A>
+{{!-- <div class="row">
+  <div class="col-lg-12"> --}}
+  {{!-- <section id="cta" class="parallax-4"> --}}
+         
+            {{!--  <div class="block-page-trials">
+              <header class="block-avail-header">
+                     
+             </header> --}}
+             <div class="row">
+                 <header class="avail-header">
+                        <h2 class="clinical-trials-h2-top">Clinical Trials </h2>
+                            <p class="lead index-p">
+                            
+
+                            With a free CesarCells account, you can search for Stem Cell, Drug, Bio-Tech, and Genetic <strong id="index-title">clinical trials</strong> that you are interested in.
+
+                            </p> 
+                        
+                             <div class="col-md-3">
+                             <h2 class="avail-trials-h2">STEMCELL</h2>
+                             <img class="clin-trial-img" src="/assets/images/donut2.jpeg">
+                             </div>
+                             <div class="col-md-3">
+                             <h2 class="avail-trials-h2">DRUG</h2>
+                             <img class="clin-trial-img" src="/assets/images/drugBottle.jpeg">
+                             </div>
+                             <div class="col-md-3">
+                             <h2 class="avail-trials-h2">BIO-TECH</h2>
+                             <img class="clin-trial-img" src="/assets/images/magGlass.jpeg">
+                             </div>
+                             <div class="col-md-3">
+                             <h2 class="avail-trials-h2">GENETIC</h2>
+                             <img class="clin-trial-img" src="/assets/images/geneladder.jpeg">
+                             </div>
+                </header>
+            </div>
+
     
    <A name="tools-main"></A>
-<section id="cta" class="parallax-3">
+{{!-- <section id="cta" class="parallax-3"> --}}
      
 
    <div class="pages-tools">
@@ -132,63 +172,25 @@
         </header>
     </div>
            
-</section>
+{{!-- </section> --}}
     
-<!-- Treatments Section -->
-<A name="treatments-main"></A>
-{{!-- <div class="row">
-  <div class="col-lg-12"> --}}
-  <section id="cta" class="parallax-4">
-         
-            {{!--  <div class="block-page-trials">
-              <header class="block-avail-header">
-                     
-             </header> --}}
-             <div class="row">
-                 <header class="avail-header">
-                        <h2 class="clinical-trials-h2-top">Clinical Trials </h2>
-                            <p class="lead index-p">
-                            
 
-                            With a free CesarCells account, you can search for Stem Cell, Drug, Bio-Tech, and Genetic clinical trials that you are intereted in.
-
-                            </p> 
-                        
-                             <div class="col-md-3">
-                             <h2 class="avail-trials-h2">STEMCELL</h2>
-                             <img class="clin-trial-img" src="/assets/images/donut2.jpeg">
-                             </div>
-                             <div class="col-md-3">
-                             <h2 class="avail-trials-h2">DRUG</h2>
-                             <img class="clin-trial-img" src="/assets/images/drugBottle.jpeg">
-                             </div>
-                             <div class="col-md-3">
-                             <h2 class="avail-trials-h2">BIO-TECH</h2>
-                             <img class="clin-trial-img" src="/assets/images/magGlass.jpeg">
-                             </div>
-                             <div class="col-md-3">
-                             <h2 class="avail-trials-h2">GENETIC</h2>
-                             <img class="clin-trial-img" src="/assets/images/geneladder.jpeg">
-                             </div>
-                </header>
-            </div>
-         
 
             
-    </section>
-    <section id="cta" class="parallax-6">
+    {{!-- </section> --}}
+    {{!-- <section id="cta" class="parallax-6"> --}}
            
                <div class="row">
                    <header class="DNA-header">
                         <h2 class="DNA-h2-top">Take a DNA Test </h2>                        
                            <div class="col-md-6">
-                           <h2 class="avail-trials-h2">With a FREE CesarCells Account You Can:</h2>
+                           <h2 class="avail-trials-h2">We currently work with raw data from the direct-to-consumer <strong id="index-title">23andMe genetic </strong>service</h2>
 
                             <ul class="list" style="text-align: left">
-                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Learn about your genetic susceptibility to certain retinal diseases</li><br>
-                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Know what your risk is for specific retinal diseases</li><br>
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Learn about your genetic susceptibility to certain <strong id="index-title">retinal diseases</strong></li><br>
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Know <strong id="index-title">your risk for specific retinal diseases</strong></li><br>
 
-                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Understand the SNPs that contribute to genetic retinal diseases</li>
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Understand the <strong id="index-title">SNPs that contribute to genetic retinal diseases</strong></li>
 
                             </ul>
                            </div>
@@ -201,11 +203,11 @@
            
 
               
-      </section>
+      {{!-- </section> --}}
     
     <div style="background-color: white; width: 100%; height: 10%; opacity: 1">
         <div style="text-align: center; opacity: 1; height: 10px">
-        <h1 class="avail-trials-h1">Get Started Finding Your Treatment Now</h1>
+        <h1 class="avail-trials-h1">Get Started Finding Your <strong id="index-title">Clinical Trial </strong>Now</h1>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
       
         </div>
