--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -1,6 +1,6 @@
 <div class="jumbotron-whatis">
         
-        <h1 class="main-h1"> What's Stargardt Disease? 
+        <h1 class="main-h1"> STARGARDT'S DISEASE 
         </h1> 
         
         <h1 style="text-align: center; color: white">  </h1>
@@ -22,7 +22,7 @@
           <h2 class="what-is-h2-stargardt">What is Stargardt Disease?</h2>
         </header>
           <p class="lead starg">
-            Stargardt disease is the most common form of inherited juvenile macular degeneration. The progressive vision loss associated with Stargardt disease is caused by the death of photoreceptor cells in the central portion of the retina called the macula.
+            <strong id="index-title">Stargardt disease is the most common form</strong> of inherited juvenile macular degeneration. The progressive vision loss associated with <strong id="index-title">Stargardt disease</strong> is caused by the death of photoreceptor cells in the central portion of the retina called the macula.
             The retina is the delicate light-sensing tissue lining the back inside wall of the eye. 
           </p><br>
           <p class="lead starg">
