--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -5,12 +5,10 @@
 {{#if info}}
 <div class="alert alert-info">{{info}}</div>
 {{/if}}
-<div class="col-lg-8">
-<h2>STARGARDT DISEASE REGISTRY</h2>
+<div class="col-lg-8" id="wrap-starg-form">
+<h2>STARGARDT'S DISEASE REPORT</h2>
 
-<h2 style="margin-top: 50px">Register if you would like us to contact you about cutting edge drug trials.</h2>
-
-
+<h2 style="margin-top: 50px">Fill out the form below if you'd like us to share your information with current and future clinical trials developing cutting edge stem cell, drug, bio-tech, gene therapy, nutrition, and other treatment types. </h2>
 
 <form class="details-new-form" action="/users/submit-stargardt-disease-registry
 " method="post" autocomplete="on">
@@ -48,7 +46,7 @@
     <input required="true" type="text" name="opthaname" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
-    <label for="opto phone and email">Contact information of your ophthalmologist (phone, email or both</label>
+    <label for="opto phone and email">Contact information of your ophthalmologist (phone, email or both)</label>
     <input required="true" type="text" name="opthaemail" placeholder="info@gmail.com 212-111-1111" class="form-control" >
   </div>
   <div class="form-group">
@@ -60,17 +58,14 @@
 </label>
     <input required="true" type="text" name="filledoutform" placeholder="" class="form-control" >
   </div>
-  <p>Cesarcells.com takes your personal information very seriously.<br> The information you provide will only be used by Cesarcells to provide updates on clinical studies, or send other helpful news on Stargardt disease trials and research.</p>
+  <p class="lead">Cesarcells.com takes your personal information very seriously.<br> Your personal health information will remain confidential and anonymous when we send it to clinics. If you are a good candidate for a future clinical trial, we will contact you to connect you with the clinic.</p>
 
-<p>If you would like to be removed from our database, please email us at info@cesarcells.com</p>
+  <p class="lead">Please share this website with people you know who may have an interest in retinal disease clinical trials.</p>
 
-<p>Please share this website with people you know who may have an interest in Stargardt disease.</p>
+  <p class="lead">By submitting this form you agree to our terms and conditions and to share this information with clinical trials relating to your personal health information.</p>
 
-<p>By submitting this form you agree to our terms and conditions</p>
-
-<input type="submit" value="Submit" class="btn btn-default"><br>
+  <input type="submit" value="Submit" class="btn btn-default"><br>
       
-
 </form>
 </div>
 </div>
