--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,7 +92,7 @@ h3 {
     /* The image used */ 
 
     /*background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");*/
-    background-image: url("/assets/images/childEye.jpg");
+    background-image: url("/assets/images/coily1.jpeg");
 
     /* Set a specific height */
     height: 90%;
@@ -602,12 +602,12 @@ pre {
     line-height: 2;
     font-size: 26px;
     font-weight: 300;
-    padding-left: 300px;
-    padding-right: 300px;
-    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    /*background-color: white;*/
     border-top-style: solid;
-    border-top-width: 3px;
-    border-top-color: whitesmoke;
+    /*border-top-width: 3px;*/
+    /*border-top-color: whitesmoke;*/
 
     /*text-align: left;*/
 
@@ -617,11 +617,11 @@ pre {
     line-height: 2;
     font-size: 26px;
     font-weight: 300;
-    padding-left: 300px;
-    padding-right: 300px;
-    /*border-top-style: solid;
-    border-top-width: 5px;
-    border-top-color: deeppink;*/
+    padding-left: 30px;
+    padding-right: 30px;
+    border-top-style: solid;
+    /*border-top-width: 5px;*/
+    /*border-top-color: deeppink;*/
     /*text-align: left;*/
 
 }
@@ -671,9 +671,10 @@ font-weight: 300;
 color: white;
 /*border-radius: 50%; */
 /*margin-top: 150px;*/
-/*background-color: white;*/
-/*background: rgba(255, 255, 255, 0.9);*/
-background: url('/assets/images/background1.jpeg');
+background-color: white;
+/*background: rgba(255, 255, 255, 255);*/
+background: url('/assets/images/inverse.jpeg');
+background-size: cover;
 opacity: 1.3;
 z-index: 7;
 /*position: fixed;*/
@@ -777,7 +778,7 @@ text-align: center;
     color: midnightblue;
 }
 .icon-test {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .icon-arrow {
@@ -825,7 +826,8 @@ text-align: center;
     /*margin-top: 100px;*/
     background-color: whitesmoke;
     /*background: rgba(255, 255, 255, 0.9);*/
-    background: url('/assets/images/background1.jpeg');
+    background: url('/assets/images/coily.jpeg');
+    /*background-size: cover;*/
     opacity: 1.2;
     z-index: 7;
     /*border-radius: 50%; */
@@ -846,10 +848,11 @@ text-align: center;
     background-color: white;
     opacity: 1.3;
     z-index: 7;
-    /*background: url('/assets/images/girleye.jpg');*/
+    background: url('/assets/images/coily1.jpeg');
     /*width: 50%;*/
     height: 700px;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
+    background-size: cover;
     z-index: 100;
     color: #433F4E;
     text-align: center;
@@ -1172,6 +1175,15 @@ text-align: center;
 #sign-up-buddy {
 
 }
+#contact-trial-btn {
+    font-size: 22px;
+    /*padding: 38px;*/
+    position: relative;
+    color: white;
+    background-color: deeppink;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+}
 #lets-go {
    font-size: 22px;
    /*padding: 38px;*/
@@ -1291,7 +1303,19 @@ text-align: center;
     /*color: deeppink;*/
     
 }
+.links-footer {
+    color: whitesmoke;
+}
+.links-footer:hover {
+    color: whitesmoke;
+    background-color: transparent;
+    text-decoration: none;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: whitesmoke;
+    transition: border-bottom-width 0.3s ease-out;
 
+}
 .glyphicon-chevron-down:hover {
     /*height: 140px;*/
     /*width: 60px;*/
@@ -1300,7 +1324,7 @@ text-align: center;
     border-color: deeppink;
     border-radius: 50%;
     padding: 10px;
-    transition: 1s ease-out;
+    transition: .2s ease-out;
 }
 #get-started-btn {
     /* width: 400px;
@@ -1792,7 +1816,8 @@ nav.navbar.navbar-default.navbar-fixed-top {
 }
 #contact-support-form {
     padding: 30px;
-    height: 50%;
+    height: 100%;
+    width: 100%;
 }
 .panel-default {
     background-color: #f7f9fa;
@@ -1802,6 +1827,7 @@ nav.navbar.navbar-default.navbar-fixed-top {
 
 background-color: whitesmoke;
 padding: 60px;
+border-radius: 5%;
  
 }
 #terms-h2 {
@@ -2017,6 +2043,10 @@ li,ul{
     padding: 20px;
     border-radius: 5%;
 }
+#wrap-starg-form {
+    border-radius: 5%;  
+    margin-left: 20%;
+}
 #wrap-contact-support-form {
     background-color: whitesmoke;
     border-radius: 5%;  
@@ -2028,6 +2058,16 @@ li,ul{
     background-color: whitesmoke;
     padding: 150px;
 
+}
+.wrap-trial-form {
+    background-color: whitesmoke;
+    border-radius: 5%;  
+    padding-left: 25%;
+    padding-right: 25%;
+}
+.trial-contact-forms {
+    width: 100%;
+    height: 100%;
 }
 #contact-support-h2 {
     margin-top: 200px;
@@ -2274,23 +2314,23 @@ li,ul{
     position: relative;
 }
 .icon-book {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .icon-check {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .icon-comment {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .icon-bull {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .icon-tasks {
-    color: deeppink;
+    color: white;
     padding: 20px;
 }
 .navi i {
@@ -2407,8 +2447,9 @@ header {
 }
 
 .navbar-default {
-    background-color: whitesmoke;
+    background-color: white;
     border-color: #ffffff;
+    box-shadow: 2px 2px 2px 2px #888888;
 }
 
 .navbar-toggle {
