--- a/views/account/support.handlebars
+++ b/views/account/support.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6" id="wrap-contact-support-form">
+  <div class="col-lg-6" id="wrap-contact-support-form">
   <h2 id="contact-support-h2">Contact Support</h2>
   <form id="contact-support-form" class="form-horizontal form-contact-support" action="/accounts/password-update" method="POST">
   
