--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -1,13 +1,41 @@
+<div class="row">
 
-<form action="/contact_us/send" method="post" style="margin-top: 150px; background-color: whitesmoke; padding: 100px">
+  <div class="col-lg-12" id="wrap-sign-in-form">
+        <h2>CONTACT US</h2>
 
-    <h2 style="text-align: left">Contact Us:</h2>
-    <label>Name: <input type="text" name="name" size="30" maxlength="100" placeholder="Your Name..."></label><br />
-    <label>Email: <input type="email" name="email" size="30" maxlength="100" placeholder="Your Email..."></label><br />
-    <p>
-      <label for="comments">Comments:</label><br />
-      <textarea rows="4" cols="40" id="comments" name="content" placeholder="Your Message..."></textarea>
-    </p>
-    {{!-- <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br /> --}}
-    <input type="submit" id="main-btn" value="Submit" />
-</form>
+    <form action="/contact_us/send" method="post" class="form-horizontal form-login-new">
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Name: </label>
+          <div class="col-sm-10">
+          <input type="text" name="name" size="30" maxlength="100" placeholder="Your Name...">
+          </div>
+        </div>
+         
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Email: </label>
+            <div class="col-sm-10">
+              <input type="email" name="email" size="30" maxlength="100" placeholder="Your Email...">
+            </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="comments">Comments:</label>
+          <div class="col-sm-10">
+            <textarea rows="4" cols="40" id="comments" name="content" placeholder="Your Message..."></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+        <label class="col-sm-2 control-label" for="submit"></label>
+
+          <div class="col-sm-10">
+            <input type="submit" id="main-btn" value="Submit" />
+          </div>
+        </div>
+        {{!-- <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br /> --}}
+        {{!-- <input type="submit" id="main-btn" value="Submit" /> --}}
+    </form>
+
+  </div>
+
+</div>
