--- a/views/trials/trial_two.handlebars
+++ b/views/trials/trial_two.handlebars
@@ -1,17 +1,41 @@
-<div class="panel-body">
-<form action="/clinical-trials/contact/two" method="post">
 
-    <h2 class="title-trials"><br> {{data.trials.2.name}}</h2>
-    <label>Subject: <input type="text" name="subject" size="30" maxlength="100" placeholder="Your Subject..."></label><br />
-    <label>Name: <input type="text" name="name" size="30" maxlength="100" placeholder="Your Name..."></label><br />
-    <label>Email: <input type="email" name="email" size="30" maxlength="100" placeholder="Your Email..."></label><br />
-    <p>
-      <label for="comments">Comments:</label><br />
-      <textarea rows="4" cols="40" id="comments" name="usercomment" placeholder="Your Message..."></textarea>
-    </p>
-    <label><input type="checkbox" name="agreecontact" checked="checked" required="true" /> I Agree To Be Contacted By This Clinic</label><br />
-    <label><input type="checkbox" name="agreequalified" checked="checked" required="true" /> I Have Qualified For This Trial</label><br />
-    <input type="submit" value="Submit" />
-</form>
-  
+<div class="row">
+    <div class="col-lg-12 wrap-trial-form">
+        
+            <form action="/clinical-trials/contact/one" method="post" class="form-horizontal trial-contact-forms">
+                <h2 class="title-trials"> <br><strong>TRIAL NAME: {{data.trials.2.name}}</strong></h2>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Subject: </label>
+                    <div class="col-md-8">
+                        <input type="text" name="subject" placeholder="Your Subject">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Name: </label>
+                    <div class="col-md-8">
+                        <input type="text" name="name" placeholder="Your Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                <label class="col-sm-2 control-label">Email: </label>
+                    <div class="col-md-8">
+                        <input type="email" name="email" placeholder="Your Email">
+                    </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-sm-2 control-label" for="comments">Comments:</label>
+                  <div class="col-md-8">
+                    <textarea rows="4" cols="40" id="comments" name="usercomment" placeholder="Your Message ..."></textarea>
+                  </div>
+                </div>
+
+                <label>
+                    <input type="checkbox" name="agreecontact" checked="checked" required="true" /> I Agree To Be Contacted By This Clinic</label><br />
+                <label><input type="checkbox" name="agreequalified" checked="checked" required="true" /> I Have Qualified For This Trial</label><br />
+                <input type="submit" value="Submit" id="contact-trial-btn" />
+            </form>             
+        
+    </div>
 </div>
+
