--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="cesar-logo" href="/"><img src="/assets/images/logo.jpeg" height="20px" width="200px"></a>
+          <a class="navbar-brand" id="cesar-logo" href="/"><strong id="index-title">CESAR</strong>CELLS</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
