--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -207,7 +207,7 @@
     
     <div style="background-color: white; width: 100%; height: 10%; opacity: 1">
         <div style="text-align: center; opacity: 1; height: 10px">
-        <h1 class="avail-trials-h1">Get Started Finding Your <strong id="index-title">Clinical Trial </strong>Now</h1>
+        <h1 class="avail-trials-h1">Get Started Finding Your <strong id="index-title">Clinical Trial </strong></h1>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
       
         </div>
