--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -6,7 +6,7 @@
  <div class="row">
   <div class="col-md-1"></div>
      <div class="col-md-9">
-         <h1 class="browse-trials-h2" style="text-align: center; color: midnightblue; margin-top: 157px">BROWSE TRIALS</h1><br>
+         <h1 class="browse-trials-h2" style="text-align: center; margin-top: 157px"><strong id="index-title">BROWSE CLINICAL TRIALS</strong></h1><br>
             <div class="table-responsive">
              <table id="gene-table" class="table table-hover" cellspacing="1">
                <thead>
