--- a/views/tools/amsler_test_page.handlebars
+++ b/views/tools/amsler_test_page.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-  <h1 id="amsler-grid-h1">AMSLER GRID TEST</h1>
+  <h1 id="amsler-grid-h1"><strong id="index-title">AMSLER GRID TEST</strong></h1>
 
   <div class="col-md-6" id="wrap-amsler-intro">
   <h1>Overview</h1>
@@ -21,12 +21,12 @@
   <p class="lead amsler-p">If you need reading glasses, please wear them while you use the Amsler grid. The grid should be at about the same distance from your eyes that any other reading material would be.</p>
 
 
-  <p class="lead amsler-p"><strong>STEP 1. Cover one eye, then focus on the dot in the center</strong></p>
+  <p class="lead amsler-p"><strong id="index-title">STEP 1. Cover one eye, then focus on the dot in the center</strong></p>
 
-  <p class="lead amsler-p"><strong>STEP 2. Write what you see </strong><br><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Do any of the lines look wavy, blurred or distorted? (All lines should be straight, all intersections should form right angles and all the squares should be the same size.)</p>
+  <p class="lead amsler-p"><strong id="index-title">STEP 2. Note what you see then test your other eye</strong><br><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Do any of the lines look wavy, blurred or distorted? (All lines should be straight, all intersections should form right angles and all the squares should be the same size.)</p>
   <p class="lead amsler-p"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Are there any missing areas or dark areas in the grid?</p>
   <p class="lead amsler-p"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>     Can you see all corners and sides of the grid?</p>
-  <p class="lead amsler-p"><strong>STEP 3. Test both eyes</strong></p>
+  <p class="lead amsler-p"><strong id="index-title">STEP 3. Repeat steps 1 & 2 in 2 weeks</strong></p>
   <p class="lead amsler-p">VERY IMPORTANT: Report any irregularity to your eye doctor immediately.</p>
   </div>
 </div>
