--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -6,22 +6,22 @@
 <div class="alert alert-info">{{info}}</div>
 {{/if}}
 <div class="col-lg-8" id="wrap-starg-form">
-<h2>STARGARDT'S DISEASE REPORT</h2>
+<h2><strong id="index-title">STARGARDT'S DISEASE</strong> REPORT</h2>
 
-<h2 style="margin-top: 50px">Fill out the form below if you'd like us to share your information with current and future clinical trials developing cutting edge stem cell, drug, bio-tech, gene therapy, nutrition, and other treatment types. </h2>
+<h2 style="margin-top: 50px">Fill out the form below if you'd like us to share your information with the world's most cutting edge companies developing <strong id="index-title">stem cell, drug, bio-tech, and gene therapy retinal disease treatments.</strong> </h2>
 
 <form class="details-new-form" action="/users/submit-stargardt-disease-registry
 " method="post" autocomplete="on">
   <br>
   
   <div class="form-group">
-    <label for="visual trouble age">At what age did you start having visual trouble?
+    <label for="visual trouble age">At what age did you start having <strong id="index-title">visual trouble</strong>?
 </label>
     <input type="number" name="visualtrouble" placeholder="" class="form-control" required="true"> 
   </div>
 
   <div class="form-group">
-    <label for="besteyevision">Back then, what was the vision of your best seeing eye (20/xxx)?</label>
+    <label for="besteyevision">Back then, what was the <strong id="index-title">vision</strong> of your best seeing eye (20/xxx)?</label>
     <input required="true" type="text" name="besteyevision" placeholder="" class="form-control" >
   </div>
 
@@ -31,22 +31,22 @@
   </div> 
 
   <div class="form-group">
-    <label for="Genetically confirmed">Have you been genetically confirmed for Stargardt (Yes/No)?</label>
+    <label for="Genetically confirmed">Have you been genetically confirmed for <strong id="index-title">Stargardt's Disease</strong> (Yes/No)?</label>
     <input required="true" type="text" name="stargeneticallyconfirm" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
-    <label for="mutation">If yes, please provide the detected ABCA4 genetic mutation(s)</label>
+    <label for="mutation">If yes, please provide the detected <strong id="index-title">ABCA4 genetic mutation(s)</strong></label>
     <input required="true" type="text" name="genemutation" placeholder="" class="form-control" >
   </div>
 
   <div class="form-group">
-    <label for="opto name">Name of your ophthalmologist
+    <label for="opto name">Name of your <strong id="index-title">ophthalmologist</strong>
 </label>
     <input required="true" type="text" name="opthaname" placeholder="" class="form-control" >
   </div>
   <div class="form-group">
-    <label for="opto phone and email">Contact information of your ophthalmologist (phone, email or both)</label>
+    <label for="opto phone and email">Contact information of your <strong id="index-title">ophthalmologist</strong> (phone, email or both)</label>
     <input required="true" type="text" name="opthaemail" placeholder="info@gmail.com 212-111-1111" class="form-control" >
   </div>
   <div class="form-group">
