--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -1,20 +1,16 @@
 <div class="jumbotron-whatis">
         
-        <h1 class="main-h1"> STARGARDT'S DISEASE 
-        </h1> 
         
-        <h1 style="text-align: center; color: white">  </h1>
+        
+<h1 class="main-h1-starg"> STARGARDT'S DISEASE </h1> 
+        {{!-- <h1 style="text-align: center; color: white">  </h1> --}}
             
-    <div class="col-md-6">
-    </div>
+    
 
 </div>
-<div class="row" id="main-row-sect">
-    <div class="container-lg">
-       
-    <div>
-<div>
+
 <div class="container">
+
   <div class="row">
     <div class="col-lg-9">
       <section class="intro-section">
