--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,12 +95,14 @@ h3 {
     background-image: url("/assets/images/coily1.jpeg");
 
     /* Set a specific height */
-    height: 90%;
+    height: 100%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
+
 }
 .parallax-6 {
     /* The image used */ 
@@ -120,7 +122,10 @@ h3 {
 .clin-trial-img {
     width: 250px;
     height: 150px;
-    opacity: .7;
+    opacity: 1;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .form-update-pass {
     width: 100%;
@@ -174,9 +179,10 @@ ul.shortcuts li {
 }
 /*glossary*/
 .glossary-h2 {
-    font-size: 50px;
+    font-size: 30px;
     text-align: left;
     color: deeppink;
+    padding: 10px;
 }
 /*main navbar text*/
 #resources-nav-text, #howitworks-nav-text, #tools-nav-text, #treatments-nav-text, #login-nav-text, #signup-nav-text{
@@ -404,13 +410,21 @@ pre {
 
     background-image: url("/assets/images/color1.jpeg");
     background-size: cover;
-    height: 70%;
+    /*height: 70%;*/
+    min-height: 70%;  /* Fallback for browsers do NOT support vh unit */
+    /*display: flex;
+    align-items: center;*/
+    /*width: 100%;*/
 }
 .jumbotron-whatis {
 
     background-image: url("/assets/images/color1.jpeg");
     background-size: cover;
     height: 70%;
+   /* min-height: 70%;   Fallback for browsers do NOT support vh unit 
+    display: flex;
+    align-items: center;*/
+    width: 100%;
 }
 .jumbotron-clinical-trial {
     background-image: url('/assets/images/color1.jpeg');
@@ -459,17 +473,69 @@ pre {
 }
 .main-h1 {
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 75px;
+    font-size: 70px;
     text-align: center;
     line-height: 1.3;
     color: white;
-    width: 100%;
+    /*width: 100%;*/
     font-weight: bold;
-    position: relative;
-    display: block;
-    top: 32%;
-    opacity: 0;
-     
+    margin-top: 12%;    
+}
+.main-h1-starg {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 60px;
+    /*text-align: center;*/
+    line-height: 1.3;
+    color: white;
+    /*width: 100%;*/
+    font-weight: bold;
+    /*margin-left: 3;*/
+    margin-top: 20%;
+    position: absolute;
+    left: 33%;
+}
+.main-h1-assistive {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 60px;
+    /*text-align: center;*/
+    line-height: 1.3;
+    color: white;
+    /*width: 100%;*/
+    font-weight: bold;
+    /*margin-left: 3;*/
+    margin-top: 20%;
+    position: absolute;
+    left: 33%;      
+}
+.main-h1-clini-trial {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 60px;
+    /*text-align: center;*/
+    line-height: 1.3;
+    color: white;
+    /*width: 100%;*/
+    font-weight: bold;
+    /*margin-left: 3;*/
+    margin-top: 20%;
+    position: absolute;
+    left: 33%; 
+}
+.main-h1-glossary {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 60px;
+    /*text-align: center;*/
+    line-height: 1.3;
+    color: white;
+    /*width: 100%;*/
+    font-weight: bold;
+    /*margin-left: 3;*/
+    margin-top: 20%;
+    position: absolute;
+    left: 33%;
+}
+.contain-assistive-h1 {
+    height: 10em;
+    position: relative
 }
 .connect23-h1 {
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -575,9 +641,9 @@ pre {
     font-size: 24px;
     /*color: #6e6e6e;*/
     font-weight: 300;
-    margin-bottom: 40px;
-    padding: 5px;
-    margin: 10px;
+    /*margin-bottom: 40px;*/
+    /*padding: 5px;*/
+    /*margin: 10px;*/
     text-transform: uppercase;
     text-align: center;
     width: 100%;
@@ -591,10 +657,10 @@ pre {
 }
 .what-is-h2 {
 
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 600;
     color: darkslategray;
-    top: 16%;
+    /*top: 16%;*/
     display: block;
     position: relative;
     opacity: 0;
@@ -646,7 +712,7 @@ margin-bottom: 69px;
 }
 .how-it-works-h2-top {
 
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 600;
     color: darkslategray;
     top: 10%;
@@ -656,7 +722,7 @@ margin-bottom: 69px;
 }
 .clinical-trials-h2-top {
 
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 600;
     color: darkslategray;
     top: 20%;
@@ -664,7 +730,7 @@ margin-bottom: 69px;
 }
 .DNA-h2-top {
 
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 600;
     color: darkslategray;
     top: 20%;
@@ -700,9 +766,9 @@ text-align: center;
 }
 
 
-.pages-tools {
+/*.pages-tools {
     height: 100%;
-}
+}*/
 .page-whatis {
     /*width: 50%;*/
     height: 100%;
@@ -824,6 +890,13 @@ text-align: center;
     font-size: 50px;
     padding-bottom: 20px;
     padding-top: 30px;
+    margin: 0;
+    line-height: 2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 .what-is-header {
@@ -1213,6 +1286,18 @@ text-align: center;
     font-size: 25px;
 
 }
+.p-glossary {
+    line-height: 1.7;
+    text-align: left;
+    font-size: 25px;
+    padding: 10px;
+}
+.p-assist {
+    line-height: 1.7;
+    text-align: left;
+    font-size: 25px;
+    padding: 10px;
+}
 .wrap-aboutus-h1 {
     margin-top: 100px;
 }
@@ -1287,28 +1372,41 @@ text-align: center;
     border-color: deeppink;
     transition: all 0.3s ease-out;
 }
-#scroll-to-1 {
+#main-btn-register-now {
+    /* width: 400px;
+     height: 95px;*/
+     font-size: 22px;
+     /*padding: 38px;*/
+     position: relative;
+     color: white;
+     background-color: deeppink;
+     border-color: deeppink;
+     transition: all 0.3s ease-out;
+     margin: 0;
+         position: absolute;
+         top: 90%;
+         left: 50%;
+         margin-right: -50%;
+         transform: translate(-50%, -50%)
+}
+#main-btn-register-now:hover {
+    /*width: 400px;
+    height: 95px;*/
     font-size: 22px;
     /*padding: 38px;*/
     position: relative;
-    margin-top: 80px;
-    /*color: white;*/
-    background-color: transparent;
+    color: deeppink;
     border-color: deeppink;
-    transition: all 0.3s ease-out;
-    cursor: pointer;
-    display: block;
-    top: 99%;
+    border-width: 5px;
+    border-style: solid;
+    background-color: transparent;
 }
+
+
 #your-genome-h2 {
     color: deeppink;
 }
-.glyphicon-chevron-down {
-    /*height: 140px;*/
-    /*width: 60px;*/
-    /*color: deeppink;*/
-    
-}
+
 .links-footer {
     color: whitesmoke;
 }
@@ -1322,16 +1420,16 @@ text-align: center;
     transition: border-bottom-width 0.3s ease-out;
 
 }
-.glyphicon-chevron-down:hover {
+/*.glyphicon-chevron-down:hover {*/
     /*height: 140px;*/
     /*width: 60px;*/
-    color: deeppink;
+   /* color: deeppink;
     border-style: solid;
     border-color: deeppink;
     border-radius: 50%;
     padding: 10px;
-    transition: .2s ease-out;
-}
+    transition: .2s ease-out;*/
+/*}*/
 #get-started-btn {
     /* width: 400px;
     height: 95px;*/
@@ -2060,7 +2158,7 @@ li,ul{
 
 }
 #wrap-sign-in-form {
-    margin-top: 150px;
+    margin-top: 100px;
     background-color: whitesmoke;
     padding: 150px;
 
@@ -2219,7 +2317,21 @@ li,ul{
 .tab-content .tab-pane {
     padding: 70px 0;
 }
-
+#scroll-to-1 {
+    font-size: 22px;
+    /*padding: 38px;*/
+    /*position: relative;*/
+    /*margin-top: 80px;*/
+    /*color: white;*/
+    background-color: transparent;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+    cursor: pointer;
+    margin-left: 50%;
+   
+    
+    /*top: 99%;*/
+}
 
 /*Login Signup Page*/
 
@@ -2636,12 +2748,17 @@ header {
     border-top-right-radius: 5px;
 /*Main CSS*/
 
+}
+#two3andme-img-index {
+    margin-top: 50px;
 
+}
+#wrap-bottom-index {
+    height: 10em;
+    position: relative 
+}
 
-
-
-
-@media only screen and (max-device-width: 767px) {
+/*@media only screen and (max-device-width: 767px) {
     .login-logo img {
         margin: 0 auto;
     }
@@ -2770,11 +2887,125 @@ header {
 }
 }
 @media only screen and (min-device-width:998px) and (max-device-width: 1350px){
-        #navigation .logo img {
-    max-width: 130px;
-    padding: 16px 0 17px;
-    width: 100%;
+    #navigation .logo img {
+        max-width: 130px;
+        padding: 16px 0 17px;
+        width: 100%;
+    }
+}*/
 }
+
+@media screen and (max-width: 482px) {
+  
+    .index-p {
+        text-align: center;
+    }
+
+    .main-h1 {
+        font-size: 60px;
+        font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+        
+        /*line-height: .3;*/
+        color: white;
+        width: 100%;
+        font-weight: bold;
+        /*position: relative;*/
+        /*display: block;*/
+        top: 42%;
+    }
+    
+    .jumbotron-whatis {
+        font-size: 30px;
+    }
+    .main-h1-starg {
+        font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 33px;
+        line-height: 1.3;
+        color: white;
+        font-weight: bold;
+        margin-top: 40%;
+        position: absolute;
+        left: 5%;
+    }
+    .what-is-h2-stargardt {
+        font-size: 45px;
+    }
+    #scroll-to-1 {
+        margin-left: 46.5%;
+    }
+    .main-h1-assistive {
+        font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 45px;
+        line-height: 1.3;
+        color: white;
+        font-weight: bold;
+        margin-top: 35%;
+        position: absolute;
+        left: 6%;        
+    }
+
+    .main-h1-clini-trial {
+        font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 45px;
+        line-height: 1.3;
+        color: white;
+        font-weight: bold;
+        margin-top: 35%;
+        position: absolute;
+        left: 6%; 
+    }
+    .what-are-trials-h2 {
+        font-size: 40px;
+    }
+    .main-h1-glossary {
+        font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 45px;
+        line-height: 1.3;
+        color: white;
+        font-weight: bold;
+        margin-top: 35%;
+        position: absolute;
+        left: 26%; 
+    }
+    .shortcuts, .glossary-a {
+        font-size: 20px;
+        padding: 10px;
+    }
+    #wrap-sign-in-form {
+    background-color: whitesmoke;
+    /*padding: 5px;*/
+    width: 100%;
+    margin-top: 40px;
+    /*margin-left: 40px;*/
+    min-height: 100%;
+    }
+    .form-login-new {
+        padding: 10px;
+    }
+    #two3andme-img-index {
+        margin-top: 5px;
+        width: 10px;
+        height: 10px;
+        
+    }
+    #main-btn-register-now {
+        /* width: 400px;
+         height: 95px;*/
+         font-size: 20px;
+         /*padding: 38px;*/
+         /*position: relative;*/
+         line-height: .3;
+         color: white;
+         background-color: deeppink;
+         border-color: deeppink;
+         transition: all 0.3s ease-out;
+         /*margin: 0;*/
+         /*position: absolute;*/
+         top: 130%;
+         left: 50%;
+         margin-right: -50%;
+         transform: translate(-50%, -50%)
+    }
 }
 
 /*dashbaord ends*/
