--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,15 @@
-<section id="cta" class="parallax-5">
-       <div class="overlay"></div>
-         
-         <div class="page-fill">
-
-         </div>
-           
-                <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong>
-                    <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
-                </h1> 
+{{!-- <section id="cta" class="parallax-5"> --}}
+  
+      <div class="row parallax-5" id="cta">
+        <div class="col-lg-12" id="wrap-main-h1">
+  
+          <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong></h1>
+              <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+          
              
-                
         </div>
-
-
-         
-        
-</section>
+      </div>            
+{{!-- </section> --}}
 
 <div id="part-1"></div>
  
@@ -23,13 +17,13 @@
    <div class="overlay"></div>
    {{!-- <div class="container"> --}}
      
-     <div class="page-fill">
+     
+       {{!-- <div class="page-whatis"> --}}
+         {{!-- <header class="what-is-header"> --}}
+         <div class="row">
+           <div class="col-lg-12 what-is-header">
 
-     </div>
-       <div class="page-whatis">
-         <header class="what-is-header">
-
-         <h2 class="what-is-h2">What is Cesarcells.com?
+             <h2 class="what-is-h2">What is Cesarcells.com?</h2>
 
              <p class="lead index-page">
              Cesarcells.com helps you find cutting edge clinical trials. 
@@ -42,9 +36,11 @@
              <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
              
              <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
-         </h2>
-         </header>
-       </div>
+             
+           </div>
+         </div>
+         {{!-- </header> --}}
+       {{!-- </div> --}}
  {{!-- </section> --}}
              
 <A name="how-it-work-main"></A>
@@ -85,8 +81,10 @@
               <header class="block-avail-header">
                      
              </header> --}}
-             <div class="row">
-                 <header class="avail-header">
+            <div class="row">
+              <div class="col-lg-12">
+                 {{!-- <header class="avail-header"> --}}
+
                         <h2 class="clinical-trials-h2-top">Clinical Trials </h2>
                             <p class="lead index-p">
                             
@@ -95,7 +93,7 @@
 
                             </p> 
                         
-                             <div class="col-md-3">
+                             <div class="col-md-3 wrap-trial-img">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
                              <img class="clin-trial-img" src="/assets/images/donut2.jpeg">
                              </div>
@@ -111,7 +109,8 @@
                              <h2 class="avail-trials-h2">GENETIC</h2>
                              <img class="clin-trial-img" src="/assets/images/geneladder.jpeg">
                              </div>
-                </header>
+                {{!-- </header> --}}
+              </div>
             </div>
 
     
@@ -194,8 +193,8 @@
 
                             </ul>
                            </div>
-                           <div class="col-md-6">
-                           <img src="/assets/images/23andMe_Box.jpg" style="margin-top: 50px">
+                           <div class="col-md-5">
+                           <img src="/assets/images/23andMe_Box.jpg" id="two3andme-img-index">
 
                            </div>                             
                   </header>
@@ -205,10 +204,10 @@
               
       {{!-- </section> --}}
     
-    <div style="background-color: white; width: 100%; height: 10%; opacity: 1">
-        <div style="text-align: center; opacity: 1; height: 10px">
+    <div class="row">
+        <div class="col-lg-12" id="wrap-bottom-index">
         <h1 class="avail-trials-h1">Get Started Finding Your <strong id="index-title">Clinical Trial </strong></h1>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
+            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn-register-now"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
       
         </div>
          
