--- a/views/resources/clinical_trial_descr.handlebars
+++ b/views/resources/clinical_trial_descr.handlebars
@@ -1,6 +1,6 @@
 <div class="jumbotron-clinical-trial">
         
-        <h1 class="main-h1"> CLINICAL TRIALS 
+        <h1 class="main-h1-clini-trial"> CLINICAL TRIALS 
         </h1> 
         
             
