--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -40,21 +40,25 @@
       <button id="sign-in-buddy" type="submit" class="btn btn-default">SIGN UP!</button> 
       <br> 
       <a href="/users/password_new">Forgot your password?</a><br>
-      <p> By registering you are agreeing to our <a target="_blank" href="/accounts/privacy-home">Privacy Policy and Terms & Conditions</a> </p>
+      <p class="lead p-terms-cond" style="margin-bottom: 50px"> By registering you are agreeing to our <a target="_blank" href="/accounts/privacy-home">Privacy Policy and Terms & Conditions</a> </p>
     </form>
   </div>
   <br>
-  <div class="col-md-6">
+  <br>
+  {{!-- <br>
+  <br>
+  <br> --}}
+    <div class="col-md-6" id="wrap-signup-descr">
 
-    <h1>With your <strong>free</strong> CesarCells account you can:</h1><br>
-      <ul class="list-group">
-        <li class="list-group-item"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>          Match with clinical trials you qualify for</li><br>
-        <li class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>          Find treatments based on your genetics</li><br>
-        <li class="list-group-item"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>          Have your 23AndMe genetic data analyzed for ARMD mutations</li><br>
-        <li class="list-group-item"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>          Stay updated on the latest Stargardt disease research</li><br>
-        <li class="list-group-item"> <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>          Given your own personal dashboard</li><br>
-      </ul><br>
+      <h1>With your <strong>free</strong> CesarCells account you can:</h1><br>
+        <ul class="list-group">
+          <li class="list-group-item"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>          Match with clinical trials you qualify for</li><br>
+          <li class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>          Find treatments based on your genetics</li><br>
+          <li class="list-group-item"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>          Have your 23AndMe genetic data analyzed for ARMD mutations</li><br>
+          <li class="list-group-item"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>          Stay updated on the latest Stargardt disease research</li><br>
+          <li class="list-group-item"> <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>          Given your own personal dashboard</li><br>
+        </ul><br>
     
-  </div>
+    </div>
   </div>
 </section>
